--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -35,6 +35,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,9 +53,10 @@
     <Compile Include="HEObjectTypesImageList.cs" />
     <Compile Include="HEOrbitalData.cs" />
     <Compile Include="HEOrbitalObjTreeNode.cs" />
-    <Compile Include="HEOrbitalObjTreeNodeComparer.cs" />
+    <Compile Include="HEOrbitalObjTreeNodeSorter.cs" />
     <Compile Include="HETreeNode.cs" />
     <Compile Include="HETreeNodeType.cs" />
+    <Compile Include="HSLColor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
