--- a/HELLION.Explorer/HELLION.Explorer.csproj
+++ b/HELLION.Explorer/HELLION.Explorer.csproj
@@ -90,7 +90,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="HELLION.Explore.cs" />
+    <Compile Include="HELLION.Explorer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\HELLIONExplorer.Designer.cs">
       <AutoGen>True</AutoGen>
