Started adding functionality for game data file display

--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -53,8 +53,8 @@
     <Compile Include="HEObjectTypesImageList.cs" />
     <Compile Include="HEOrbitalData.cs" />
     <Compile Include="HEOrbitalObjTreeNode.cs" />
-    <Compile Include="HEOrbitalObjTreeNodeSorter.cs" />
     <Compile Include="HETreeNode.cs" />
+    <Compile Include="HETreeNodeSorter.cs" />
     <Compile Include="HETreeNodeType.cs" />
     <Compile Include="HEUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -62,7 +62,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
