Started work on improved checks (not yet perfect) for the existence of the Data folder. Added a WebBrowser based syntax highlighted json view.

--- a/HELLION.Explorer/App.config
+++ b/HELLION.Explorer/App.config
@@ -50,6 +50,30 @@
             <setting name="sStationsFileName" serializeAs="String">
                 <value>Stations.json</value>
             </setting>
+            <setting name="bLoadLootCategoriesFile" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="sLootCategoriesFileName" serializeAs="String">
+                <value>LootCategories.json</value>
+            </setting>
+            <setting name="bLoadSpawnRulesFile" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="sSpawnRulesFileName" serializeAs="String">
+                <value>SpawnRules.json</value>
+            </setting>
+            <setting name="bLoadItemRecipiesFile" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="sItemRecipiesFileName" serializeAs="String">
+                <value>ItemRecipies.json</value>
+            </setting>
+            <setting name="bLoadGlossaryFile" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="sGlossaryFileName" serializeAs="String">
+                <value>Glossery.json</value>
+            </setting>
         </HELLION.Explorer.Properties.HELLIONExplorer>
         <HELLION_Explorer.Properties.Settings>
             <setting name="sGameDataFolder" serializeAs="String">
