Reimplementation nearly complete.

--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -74,16 +74,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HEDocumentWorkspace.cs" />
+    <Compile Include="HEGameData.cs" />
+    <Compile Include="HESolarSystem.cs" />
     <Compile Include="HEStaticDataFileCollection.cs" />
-    <Compile Include="HEViewGameData.cs" />
-    <Compile Include="HEViewSolarSystem.cs" />
-    <Compile Include="_HECelestialBody.cs" />
-    <Compile Include="_HEDocumentWorkspace.cs" />
-    <Compile Include="_HEGameFile.cs" />
     <Compile Include="HEJsonBaseFile.cs" />
-    <Compile Include="_HEJsonFile.cs" />
     <Compile Include="HEJsonGameFile.cs" />
-    <Compile Include="HEnewDocumentWorkspace.cs" />
     <Compile Include="HEObjectTypesImageList.cs" />
     <Compile Include="HEOrbitalData.cs" />
     <Compile Include="HEOrbitalObjTreeNode.cs" />
@@ -188,7 +184,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
