--- a/HELLION.Explorer/HELLION.Explorer.csproj
+++ b/HELLION.Explorer/HELLION.Explorer.csproj
@@ -99,6 +99,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FastColoredTextBox, Version=2.16.21.0, Culture=neutral, PublicKeyToken=fb8aa12b994ef61b, processorArchitecture=MSIL">
+      <HintPath>..\packages\FCTB.2.16.21.0\lib\FastColoredTextBox.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Newtonsoft.Json.dll</HintPath>
@@ -116,6 +119,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JsonDataViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="JsonDataViewForm.Designer.cs">
+      <DependentUpon>JsonDataViewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -130,6 +139,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>HELLIONExplorer.settings</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="JsonDataViewForm.resx">
+      <DependentUpon>JsonDataViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -144,6 +156,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\HELLIONExplorer.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
