--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -80,8 +80,9 @@
     <Compile Include="FileHandling\HEStaticDataFileCollection.cs" />
     <Compile Include="FileHandling\HEJsonBaseFile.cs" />
     <Compile Include="FileHandling\HEJsonGameFile.cs" />
+    <Compile Include="TreeNodes\HEGameDataTreeNode.cs" />
     <Compile Include="TreeNodes\HEOrbitalData.cs" />
-    <Compile Include="TreeNodes\HEOrbitalObjTreeNode.cs" />
+    <Compile Include="TreeNodes\HESolarSystemTreeNode.cs" />
     <Compile Include="TreeNodes\HETNSorterSemiMajorAxis.cs" />
     <Compile Include="TreeNodes\HETreeNode.cs" />
     <Compile Include="TreeNodes\HETreeNodeType.cs" />
@@ -89,6 +90,26 @@
     <Compile Include="Utilities\HEUpdateChecker.cs" />
     <Compile Include="Utilities\HEUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="ZeroGravity.Data-Enums\AttachPointType.cs" />
+    <None Include="ZeroGravity.Data-Enums\AuthorizedPersonRank.cs" />
+    <None Include="ZeroGravity.Data-Enums\CargoCompartmentType.cs" />
+    <None Include="ZeroGravity.Data-Enums\CelestialBodyGUID.cs" />
+    <None Include="ZeroGravity.Data-Enums\ColliderDataType.cs" />
+    <None Include="ZeroGravity.Data-Enums\DistressType.cs" />
+    <None Include="ZeroGravity.Data-Enums\GenericItemSubType.cs" />
+    <None Include="ZeroGravity.Data-Enums\ItemType.cs" />
+    <None Include="ZeroGravity.Data-Enums\LogItemTypes.cs" />
+    <None Include="ZeroGravity.Data-Enums\MachineryPartSlotScope.cs" />
+    <None Include="ZeroGravity.Data-Enums\MachineryPartType.cs" />
+    <None Include="ZeroGravity.Data-Enums\RepairPointDamageType.cs" />
+    <None Include="ZeroGravity.Data-Enums\ResourceType.cs" />
+    <None Include="ZeroGravity.Data-Enums\SpawnPointState.cs" />
+    <None Include="ZeroGravity.Data-Enums\SpawnPointType.cs" />
+    <None Include="ZeroGravity.Data-Enums\SpawnSettingsCase.cs" />
+    <None Include="ZeroGravity.Data-Enums\SubSystemAuxDataType.cs" />
+    <None Include="ZeroGravity.Data-Enums\TagAction.cs" />
+    <None Include="ZeroGravity.Data-Enums\TypeOfDamage.cs" />
+    <None Include="ZeroGravity.Data-Enums\VesselComponentType.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="_EmbeddedImages\3DCameraOrbit_16x.png" />
@@ -181,6 +202,9 @@
     <EmbeddedResource Include="_EmbeddedImages\String_16x.png" />
     <EmbeddedResource Include="_EmbeddedImages\Toolbox_16x.png" />
     <EmbeddedResource Include="_EmbeddedImages\TreeView_16x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="JsonSnippets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
