--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -76,12 +76,14 @@
   <ItemGroup>
     <Compile Include="HEDocumentWorkspace.cs" />
     <Compile Include="HEGameData.cs" />
+    <Compile Include="HESearchHandler.cs" />
     <Compile Include="HESolarSystem.cs" />
     <Compile Include="FileHandling\HEStaticDataFileCollection.cs" />
     <Compile Include="FileHandling\HEJsonBaseFile.cs" />
     <Compile Include="FileHandling\HEJsonGameFile.cs" />
     <Compile Include="TreeNodes\HEGameDataTreeNode.cs" />
     <Compile Include="TreeNodes\HEOrbitalData.cs" />
+    <Compile Include="TreeNodes\HESearchHandlerTreeNode.cs" />
     <Compile Include="TreeNodes\HESolarSystemTreeNode.cs" />
     <Compile Include="TreeNodes\HETNSorterSemiMajorAxis.cs" />
     <Compile Include="TreeNodes\HETreeNode.cs" />
@@ -189,7 +191,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
+      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
