Missed update of .csproj

--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -74,10 +74,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HEDocumentWorkspace.cs" />
-    <Compile Include="HEGameData.cs" />
-    <Compile Include="HESearchHandler.cs" />
-    <Compile Include="HESolarSystem.cs" />
+    <Compile Include="DocumentWorkspace\HEDocumentWorkspace.cs" />
+    <Compile Include="DocumentWorkspace\HEGameData.cs" />
+    <Compile Include="DocumentWorkspace\HESearchHandler.cs" />
+    <Compile Include="DocumentWorkspace\HESolarSystem.cs" />
     <Compile Include="FileHandling\HEStaticDataFileCollection.cs" />
     <Compile Include="FileHandling\HEJsonBaseFile.cs" />
     <Compile Include="FileHandling\HEJsonGameFile.cs" />
@@ -191,7 +191,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
