--- a/HELLION.Explorer/App.config
+++ b/HELLION.Explorer/App.config
@@ -1,18 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="HELLION.Explorer.Properties.HELLIONExplorer" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="HELLION_Explorer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="HELLION.Explorer.Properties.HELLIONExplorer" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="HELLION_Explorer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <userSettings>
         <HELLION.Explorer.Properties.HELLIONExplorer>
             <setting name="sGameDataFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="bLoadCelestialBodiesFile" serializeAs="String">
                 <value>True</value>
@@ -77,7 +77,7 @@
         </HELLION.Explorer.Properties.HELLIONExplorer>
         <HELLION_Explorer.Properties.Settings>
             <setting name="sGameDataFolder" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="bLoadCelestialBodiesFile" serializeAs="String">
                 <value>True</value>
