--- a/HELLION.Explorer/App.config
+++ b/HELLION.Explorer/App.config
@@ -12,67 +12,10 @@
     <userSettings>
         <HELLION.Explorer.Properties.HELLIONExplorer>
             <setting name="sGameDataFolder" serializeAs="String">
-                <value/>
+                <value />
             </setting>
-            <setting name="bLoadCelestialBodiesFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="sCelestialBodiesFileName" serializeAs="String">
-                <value>CelestialBodies.json</value>
-            </setting>
-            <setting name="bLoadAsteroidsFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="sAsteroidsFileName" serializeAs="String">
-                <value>Asteroids.json</value>
-            </setting>
-            <setting name="bLoadStructuresFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="sStructuresFileName" serializeAs="String">
-                <value>Structures.json</value>
-            </setting>
-            <setting name="bLoadDynamicObjectsFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="sDynamicObjectsFile" serializeAs="String">
-                <value>DynamicObjects.json</value>
-            </setting>
-            <setting name="bLoadModulesFile" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="sModulesFileName" serializeAs="String">
-                <value>Modules,json</value>
-            </setting>
-            <setting name="bLoadStationsFile" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="sStationsFileName" serializeAs="String">
-                <value>Stations.json</value>
-            </setting>
-            <setting name="bLoadLootCategoriesFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="sLootCategoriesFileName" serializeAs="String">
-                <value>LootCategories.json</value>
-            </setting>
-            <setting name="bLoadSpawnRulesFile" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="sSpawnRulesFileName" serializeAs="String">
-                <value>SpawnRules.json</value>
-            </setting>
-            <setting name="bLoadItemRecipiesFile" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="sItemRecipiesFileName" serializeAs="String">
-                <value>ItemRecipies.json</value>
-            </setting>
-            <setting name="bLoadGlossaryFile" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="sGlossaryFileName" serializeAs="String">
-                <value>Glossery.json</value>
+            <setting name="sBlueprintsFolder" serializeAs="String">
+                <value />
             </setting>
         </HELLION.Explorer.Properties.HELLIONExplorer>
         <HELLION_Explorer.Properties.Settings>
