Blueprint Editor - creating appropriate docking ports for a new structure based on its type.

--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -83,6 +83,7 @@
     <Compile Include="DocumentWorkspace\HEGameData.cs" />
     <Compile Include="DocumentWorkspace\HESearchHandler.cs" />
     <Compile Include="DocumentWorkspace\HESolarSystem.cs" />
+    <Compile Include="FileHandling\HEBlueprintCollection.cs" />
     <Compile Include="FileHandling\HEBlueprintStructureDefinitionsFile.cs" />
     <Compile Include="FileHandling\HEJsonBlueprintFile.cs" />
     <Compile Include="FileHandling\HEJsonBaseFile.cs" />
@@ -200,7 +201,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
+      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
